# gnome

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
src/: CMakeLists.txt
src/app/: CMakeLists.txt  main.cpp  utils.h
src/core/: CMakeLists.txt  block.cpp  block.h  chain.cpp  chain.h  crypto.h  currency.h  gnome.cpp  gnome.h  miner.h  pool.cpp  pool.h  random.h  transaction.cpp  transaction.h  utils.h  wallet.cpp  wallet.h
